# synth_one

./: CMakeLists.txt  README.md  ball.c  ball.h  cosine.h  delay.c  delay.h  distortion.c  distortion.h  envelope.c  envelope.h  fm.c  fm.h  linear_control.h  low_pass_filter.c  low_pass_filter.h  midi.c  midi.h  osc.c  osc.h  sequencer.c  sequencer.h  slide_controller.c  slide_controller.h  square_controller.c  square_controller.h  synth_one.c  text.c  text.h  util.c  util.h
.github/workflows/: cmake-single-platform.yml
